--- a/views/posts/week_19.erb
+++ b/views/posts/week_19.erb
@@ -2,7 +2,7 @@ date: 2014-03-14
 title: "Contributing to an Open Source Project, Part the First"
 
 <div class="posts">
-<h1>"In which H ventures out of the nest"</h1>
+  <h1>In which an Adie ventures out of the nest</h1>
   <p>
     Last Tuesday, the folks at Seattle.rb announced they had a few <a href='https://github.com/seattlerb/seattlerb.org/issues?labels=Help+Seattle.rb'>issues</a> with their <a href="seattlerb.org">website</a>, and invited those there to help resolve them as a way of giving back to the community.  Looking over the list, many of the issues seemed very similar to the tasks of a <a href='https://github.com/Ada-Developers-Academy/daily-curriculum/blob/master/week14/p_patch_planner.md'>recent project</a> we had done in class. Figuring that practice could only make <strike>perfect</strike> permament, I decided to have a go, and chose a relatively easy feature: showing past talks.  Having built plenty of index pages in Rails before, I figured I could hack it out pretty quickly.
   </p>
@@ -10,7 +10,7 @@ title: "Contributing to an Open Source Project, Part the First"
     Well. It job was trickier than anticipated, for many reasons.  And I realized that there is a lot more pressure when working on someone else's actual production code -- outside of the warm, nurturing nest of ADA, where it's cold and full of hardened, weathered old birds.I quickly ran into a number of problems, but for now I wanted to talk about:
   </p>
 
-  <h2>Lesson #1: Managing Different Versions of Ruby</h2>
+  <h2>Managing Different Versions of Ruby (on Macs)</h2>
   <p>
     The first major issue was that the versions of pretty much everything they were using was outdated.  After cloning the repo onto my local machine and trying to open it, I got the following message in my terminal:
   </p>
@@ -64,17 +64,44 @@ title: "Contributing to an Open Source Project, Part the First"
     Since I only have ruby-2.0.0-p247, I have to actually specify <code>rvm 2.0.0-p247</code> in order for my terminal to not get mad at me.
   </p>
 
+  <h2>Managing Different Versions of Ruby (in Rails)</h2>
   <p>
-    In older versions of Rails,
+    Cleverly enough, Rails has its own ways of dealing with different versions of Ruby.  Since I had been operating in the cushy, exclusive world of Ruby 2.0.0 and Rails 4, I never really had to think about any of that stuff. Now that I was being confronted with Ruby 1.9.2 (gasp!) and Rails 3.1.0 (double gasp!), I had to learn about different compatibility issues.
+  </p>
+  <p>
+    In older versions of Rails, there is a <code>.rvmrc</code> file in the root directory that specifies which version of Ruby the application uses.  In the seattlerb.org directory, sure enough there was this file, which contained:
   </p>
 
   <p>
-    rvm 1.9.2-p180@heroku-cedar
+    <code>rvm 1.9.2-p180@heroku-cedar</code>
+  </p>
+  <p>
+    In later versions, this file got changed to <code>.ruby-version</code>.
+    (For more on this, check out <a href='http://danielsellergren.com/what-is-ruby_version-file-how-does-it-differ-from-rvmrc/'>this</a> blog post).
+  </p>
+  <p>
+    However, neither of these is necessary now thanks to <a href='http://bundler.io/v1.2/whats_new.html'>Bundler!</a> Rather than dealing with separate hidden files, all you have to do in your Gemfile is say:
   </p>
 
+  <p>
+    <code>
+      source "https://rubygems.org"<br>
+      &nbsp;&nbsp;ruby '1.9.2'<br>
+      &nbsp;&nbsp;<em>(other gems go here)</em><br>
+      &nbsp;&nbsp;...
+    </code>
+  </p>
+
+  <p>
+    Then <code>bundle</code> as usual and <em>voilà!</em> Your Rails app now knows what Ruby version to use.
+  </p>
+
+
+<h3>Further reading</h3>
+<ul>
+<li><a href='http://bundler.io/v1.5/gemfile.html'>Bundling your Gemfile</a></li>
+<li><a href= 'https://devcenter.heroku.com/articles/ruby-versions'> What Heroku says about specifying Ruby versions</a></li>
+<li><a href="http://railsapps.github.io/managing-rails-versions-gems.html">Managing Rails versions and Gems</a></li>
+</ul>
 </div>
 
-resources
-http://bundler.io/v1.5/gemfile.html
-http://stackoverflow.com/questions/5864825/controlling-ruby-version-used-in-rails
-http://railsapps.github.io/managing-rails-versions-gems.html
