--- a/views/posts/week_12.erb
+++ b/views/posts/week_12.erb
@@ -127,13 +127,16 @@ title: "In which H deals with more keys"
 <p>
   Ta-da! Honestly, the hardest part is probably making your eyeballs focus on the robot vomit that constitutes returned hashes, or hash-like objects, and extracting the right information out of it. Fortunately in the case of omniauth, we have a nice <a href="https://github.com/intridea/omniauth/wiki/Auth-Hash-Schema">schema</a> already provided for us.  Aren't Rubyists nice? They are so nice.
 </p>
-<p>
+<!-- <p>
   Next time: How and when to parse hashes, and why it's the best thing since sliced bread.
-</p>
+</p> -->
 
+  <h3>For fun:
+    <a href= "http://www.youtube.com/watch?v=nMmyQF35e8U">In which Peeps make a Hash of things</a>
+  </h3>
 
-   <h1><a href= "http://www.youtube.com/watch?v=nMmyQF35e8U">In which Peeps make a Hash of things</a></h1>
-
-   <div class="footnote">[1] For the record, they had already gotten rid of that section when I took the SATs. I'm not <em>that</em> old.</div>
+  <div class="footnote">
+    [1] For the record, they had already gotten rid of that section when I took the SATs. I'm not <em>that</em> old.
+  </div>
 
 </div>
